@@ -1,7 +1,9 @@
 v0.5.1
 New : Optimal parsing => Very high compression modes, thanks to Przemyslaw Skibinski
 Changed : Dictionary builder integrated into libzstd and zstd cli
+Changed : zstd cli now uses "multiple input files" as default mode
 Fix : high compression modes for big-endian platforms
+New : zstd cli : `-t` | `--test` command
 
 v0.5.0
 New : dictionary builder utility
